2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory),
	(background_inherit):
	* ccss-cairo/ccss-background-parser.h:
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_style_factory), (border_width_factory),
	(border_factory_impl), (border_side_inherit_impl),
	(border_left_inherit), (border_top_inherit),
	(border_right_inherit), (border_bottom_inherit), (border_inherit),
	(border_radius_factory), (border_radius_inherit):
	* ccss-cairo/ccss-border-parser.h:
	Fix style inheritance for `border'.

2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory):
	* ccss/ccss-style.c (ccss_style_get_double),
	(ccss_style_get_string), (ccss_style_get_property),
	(ccss_style_set_property):
	* ccss/ccss-stylesheet.c (inherit_container_style),
	(query_container_r), (ccss_stylesheet_query):
	Fix style inheritance for `background', more to come.

2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory),
	(background_inherit), (background_attachment_new),
	(background_image_new), (background_position_new),
	(background_repeat_new), (background_size_new):
	* ccss-cairo/ccss-border-image-parser.c:
	* ccss-cairo/ccss-border-parser.c (border_radius_new),
	(border_style_new), (border_width_new):
	* ccss-cairo/ccss-cairo-style.h:
	* ccss-cairo/ccss-color.c:
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/property.sgml:
	* ccss-doc/tmpl/style.sgml:
	* ccss/ccss-property-generic.c:
	* ccss/ccss-property.h:
	* ccss/ccss-style.c (ccss_style_set_property):
	* ccss/ccss-style.h:
	* ccss/ccss-stylesheet.c (inherit_container_style),
	(ccss_stylesheet_query):
	* ccss/ccss.sym:
	* examples/Makefile.am:
	Work on single-canvas support and style inheritance.

2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* examples/example-5.c (expose_cb), (url), (main):
	* examples/example-5.svg:
	Add SVG fragment example.
